--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: progressive-ui-backend
     env: python
-    pythonVersion: 3.11  # 👈 switch from 3.13 to 3.11
-    buildCommand: |
-      pip install --upgrade pip setuptools wheel
-      pip install -r requirements.txt
+    build:
+      pythonVersion: 3.11  # ✅ Now this works
+      buildCommand: |
+        pip install --upgrade pip setuptools wheel
+        pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
